[package]
edition = "2021"
name = "rs-api"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.6.3", default-features = false, features = ["napi4", "napi6"] }
napi-derive = "2.6.0"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
ta-lib = "0.1.1"
yata = { version= "0.6.1", features = ["period_type_u16"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
